--- a/styles/index.css
+++ b/styles/index.css
@@ -19,6 +19,17 @@ button {
 }
 
 /* Store */
+.filter-container {
+  display: grid;
+  grid-auto-flow: column;
+  place-content: center;
+  grid-gap: 20px;
+  padding-bottom: 20px;
+}
+
+.filter-container button {
+  width: 100px;
+}
 
 #store {
   height: 40vh;
